tests/error/linear_errors/tuple_moved_parent_borrow.err
Error: Copy violation (at $FILE:21:7)
   | 
19 |     s = S((qubit(), 100))
20 |     use(s.t[0])
21 |     if s.check():
   |        ^ Variable `s` with non-copyable type `S` cannot be borrowed
   |          ...

Note:
   | 
19 |     s = S((qubit(), 100))
20 |     use(s.t[0])
   |         ------ ... since the member `s.t[0]` with non-copyable type `qubit`
   |                was already consumed here

Guppy compilation failed due to 1 previous error
